session-12-ingress-configmaps-secrets/04-full-demo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-app
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-app
      tier: frontend
  template:
    metadata:
      labels:
        app: yatri-app
        tier: frontend
    spec:
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
  labels:
    app: yatri-app
spec:
  type: ClusterIP
  selector:
    app: yatri-app
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
